[gd_scene load_steps=13 format=3 uid="uid://d0ppwepihs2sf"]

[ext_resource type="Script" path="res://scenes/machines/mining_laser.gd" id="1_0nmhe"]
[ext_resource type="Gradient" uid="uid://dgn4q6wqo5ctv" path="res://resources/shadow_gradient.Gradient.tres" id="1_fvpbp"]
[ext_resource type="Texture2D" uid="uid://dfnqvnmdlnuuv" path="res://assets/sprites/mining_laser_base.png" id="1_q225h"]
[ext_resource type="Texture2D" uid="uid://6qwvduq4cf0w" path="res://assets/sprites/mining_laser.png" id="3_e51kj"]
[ext_resource type="Texture2D" uid="uid://ct7v3bof7ueac" path="res://assets/sprites/mining_laser_head.png" id="4_evo81"]
[ext_resource type="PackedScene" uid="uid://ccjbkmd2fo5a6" path="res://scenes/tile_map_detection_area.tscn" id="6_j2lfr"]
[ext_resource type="Material" uid="uid://d36i8ou3b3qft" path="res://resources/laser.ParticleProcessMaterial.tres" id="7_g3kp0"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_87k35"]
gradient = ExtResource("1_fvpbp")
width = 24
height = 8
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="Animation" id="Animation_xrhuw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Laser/LaserHead:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.872665]
}

[sub_resource type="Animation" id="Animation_04dio"]
resource_name = "power_down"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Laser/LaserHead:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.419608, 0.419608, 0.419608, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Laser/LaserHead:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.872665]
}

[sub_resource type="Animation" id="Animation_siemf"]
resource_name = "power_up"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Laser/LaserHead:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.872665, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Laser/LaserHead:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.419813, 0.419813, 0.419813, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ws28p"]
_data = {
"RESET": SubResource("Animation_xrhuw"),
"power_down": SubResource("Animation_04dio"),
"power_up": SubResource("Animation_siemf")
}

[node name="MiningLaser" type="StaticBody2D" groups=["machines"]]
collision_layer = 8
collision_mask = 0
script = ExtResource("1_0nmhe")
mining_power = 1.0
fuel_consumption_rate = 0.1

[node name="Main" type="CanvasGroup" parent="."]

[node name="Shadow" type="Sprite2D" parent="Main"]
texture = SubResource("GradientTexture2D_87k35")

[node name="Base" type="Sprite2D" parent="Main"]
texture = ExtResource("1_q225h")
offset = Vector2(0, -14)

[node name="Laser" type="CanvasGroup" parent="."]
y_sort_enabled = true
position = Vector2(0, -25.5)

[node name="Bulb" type="Sprite2D" parent="Laser"]
texture = ExtResource("4_evo81")
offset = Vector2(0, 11)

[node name="LaserHead" type="Sprite2D" parent="Laser"]
modulate = Color(0.419813, 0.419813, 0.419813, 1)
rotation = 0.872665
texture = ExtResource("3_e51kj")
offset = Vector2(0, 11)

[node name="FirePoint" type="Marker2D" parent="Laser/LaserHead"]
position = Vector2(13, 0)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, -4, 8, 0, 0, 4, -8, 0)

[node name="TileMapDetectionArea" parent="." node_paths=PackedStringArray("root_node") instance=ExtResource("6_j2lfr")]
visible = false
default_color = Color(1, 0, 0.952941, 0.501961)
root_node = NodePath("..")
tile_radius = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ws28p")
}

[node name="CoolDownTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.1
one_shot = true

[node name="MiningTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.05

[node name="MoveTowardsArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 16

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MoveTowardsArea"]
polygon = PackedVector2Array(0, -80, 160, 0, 0, 80, -160, 0)

[node name="MiningParticles" type="GPUParticles2D" parent="."]
visible = false
emitting = false
amount = 16
process_material = ExtResource("7_g3kp0")
lifetime = 0.3

[connection signal="animation_finished" from="AnimationPlayer" to="." method="on_animation_finished"]
[connection signal="timeout" from="CoolDownTimer" to="." method="on_cooldown_timer_timeout"]
[connection signal="timeout" from="MiningTimer" to="." method="on_mining_timer_timeout"]
[connection signal="body_entered" from="MoveTowardsArea" to="." method="on_body_entered_move_towards_area"]
